Agregando rating a la lista de lugares

--- a/app/views/actividades/show.html.erb
+++ b/app/views/actividades/show.html.erb
@@ -71,10 +71,10 @@
       <p><%=	 link_to "Do you want to change your location?", edit_user_registration_path(current_user) %> </p>
     </div>
       <%	 place = ActiveSupport::JSON.decode(open("https://maps.googleapis.com/maps/api/place/nearbysearch/json?location=#{current_user.lat},#{current_user.lng}&radius=100000&types=#{@actividad.name}&sensor=false&key=AIzaSyCxH3uvobKynTSs63CoAcTQSB0xzCRduCs").read) %>
-      <ul class="col-md-10 col-lg-8 col-sm-10 col-xs-12" style="padding: 0px">
+      <ul class="col-md-12 col-lg-12 col-sm-12 col-xs-12" style="padding: 0px">
         <div class="row">
         <% place['results'].each do |result| %>
-          <div class="col-md-4">
+            <div class="col-md-4">
               <%	 if result['photos'].nil?  %>
               <%	else  %>
                   <% result['photos'].each do |f| %>
@@ -83,8 +83,8 @@
                     </div>
                     <% end %>
               <%	end  %>
-          </div>
-            <div class="col-md-8">
+            </div>
+            <div class="col-md-5">
               <div class="col-md-8">
                   <%= form_for(@micrositio) do |f| %>
                       <%= f.hidden_field :name, value: result['name'] %>
@@ -102,8 +102,13 @@
                         <br/>
                     <% end  %>
                 </p>
-                <%= placeinside['rating']	  %>
               </div>
+
+            </div>
+
+            <div class="col-md-3">
+              <h5> Rating</h5>
+              <%= placeinside['result']['rating']	  %>
             </div>
         <% end  %>
         </div>
