Agregando lugares de FB a la lista de lugares

--- a/app/views/actividades/show.html.erb
+++ b/app/views/actividades/show.html.erb
@@ -65,50 +65,87 @@
         <div class="col-md-4 col-md-offset-4" style="margin-bottom: 10px"><%= f.submit "Update", class: 'btn btn-primary' %></div>
     <% end %>
 <%	 else %>
+   <div class="col-md-12 col-sm-12 col-xs-12">
+
+        <div class="row">
+          <p><%=	 link_to "Do you want to change your location?", edit_user_registration_path(current_user) %> </p>
+        </div>
+   </div>
+
+    <%	fbplace = ActiveSupport::JSON.decode(open("https://graph.facebook.com/search?q=#{@actividad.namefb}&type=place&center=#{current_user.lat},#{current_user.lng}&distance=10000&access_token=#{current_user.oauth_token}").read) %>
+      <% fbplace['data'].each do |result| %>
+         <%	fbplacein = ActiveSupport::JSON.decode(open("https://graph.facebook.com/#{result['id']}?&access_token=#{current_user.oauth_token}").read) %>
+            <ul class="col-md-12 col-lg-12 col-sm-12 col-xs-12" style="padding: 0px">
+              <div class="row">
+                    <div class="col-md-3 col-sm-3">
+
+                      <%	 if fbplacein['cover'].nil?  %>
+                      <%	else  %>
+                            <div class="img-responsive" style="height: 100px; overflow: hidden">
+                              <%= image_tag(fbplacein['cover']['source'])  %>
+                            </div>
+                      <%	end  %>
+                    </div>
+                    <div class="col-md-7 col-sm-7">
+                      <div class="col-md-7 col-sm-9">
+                        <%= form_for(@micrositio) do |f| %>
+                            <%= f.hidden_field :name, value: result['name'] %>
+                            <%= f.hidden_field :reference, value: result['id'] %>
+                            <%= f.submit result['name'], class: "h6" %>
+                        <% end %>
+                      </div>
+                      <div class="col-md-5 col-sm-3">
+                        <p style="height: 100px; overflow: hidden">
+                          <% result['category_list'].each do |types| %>
+                              <%= types['name'] %>
+                              <br/>
+                          <% end  %>
+                        </p>
+                      </div>
+                    </div>
+                    <div class="col-md-2 col-sm-2">
+                      <h5> Rating</h5>
+                    </div>
+              </div>
+            </ul>
+        <%	 end %>
 
 
-    <div class="row">
-      <p><%=	 link_to "Do you want to change your location?", edit_user_registration_path(current_user) %> </p>
-    </div>
-      <%	 place = ActiveSupport::JSON.decode(open("https://maps.googleapis.com/maps/api/place/nearbysearch/json?location=#{current_user.lat},#{current_user.lng}&radius=100000&types=#{@actividad.name}&sensor=false&key=AIzaSyCxH3uvobKynTSs63CoAcTQSB0xzCRduCs").read) %>
+   <%	 place = ActiveSupport::JSON.decode(open("https://maps.googleapis.com/maps/api/place/nearbysearch/json?location=#{current_user.lat},#{current_user.lng}&radius=100000&types=#{@actividad.namegoogle}&sensor=false&key=AIzaSyCxH3uvobKynTSs63CoAcTQSB0xzCRduCs").read) %>
       <ul class="col-md-12 col-lg-12 col-sm-12 col-xs-12" style="padding: 0px">
         <div class="row">
         <% place['results'].each do |result| %>
-            <div class="col-md-4 col-sm-4">
+            <div class="col-md-3 col-sm-3">
               <%	 if result['photos'].nil?  %>
               <%	else  %>
                   <% result['photos'].each do |f| %>
                     <div class="img-responsive" style="height: 100px; overflow: hidden">
-                      <%= image_tag("https://maps.googleapis.com/maps/api/place/photo?maxwidth=200&photoreference=#{f['photo_reference']}&sensor=true&key=AIzaSyCxH3uvobKynTSs63CoAcTQSB0xzCRduCs")  %>
+                      <%= image_tag("https://maps.googleapis.com/maps/api/place/photo?maxwidth=100&photoreference=#{f['photo_reference']}&sensor=true&key=AIzaSyCxH3uvobKynTSs63CoAcTQSB0xzCRduCs")  %>
                     </div>
                     <% end %>
               <%	end  %>
             </div>
-            <div class="col-md-5 col-sm-5">
-              <div class="col-md-9 col-sm-9">
-                  <%= form_for(@micrositio) do |f| %>
-                      <%= f.hidden_field :name, value: result['name'] %>
-                      <%= f.hidden_field :reference, value: result['reference'] %>
-                      <%= f.submit result['name'], class: "h6" %>
-                  <% end %>
-              </div>
-              <div class="col-md-3 col-sm-3">
-                <%	placeinside = ActiveSupport::JSON.decode(open("https://maps.googleapis.com/maps/api/place/details/json?reference=#{result['reference']}&sensor=true&key=AIzaSyCxH3uvobKynTSs63CoAcTQSB0xzCRduCs").read) %>
-
-
-                <p style="height: 100px; overflow: hidden">
-                    <% result['types'].each do |types| %>
-                           <%= types%>
-                        <br/>
-                    <% end  %>
-                </p>
-              </div>
-
+            <div class="col-md-7 col-sm-7">
+                  <div class="col-md-7 col-sm-9">
+                      <%= form_for(@micrositio) do |f| %>
+                          <%= f.hidden_field :name, value: result['name'] %>
+                          <%= f.hidden_field :reference, value: result['reference'] %>
+                          <%= f.submit result['name'], class: "h6" %>
+                      <% end %>
+                  </div>
+                  <div class="col-md-5 col-sm-3">
+                 <!--   <%	placeinside = ActiveSupport::JSON.decode(open("https://maps.googleapis.com/maps/api/place/details/json?reference=#{result['reference']}&sensor=true&key=AIzaSyCxH3uvobKynTSs63CoAcTQSB0xzCRduCs").read) %> -->
+                    <p style="height: 100px; overflow: hidden">
+                        <% result['types'].each do |types| %>
+                               <%= types%>
+                            <br/>
+                        <% end  %>
+                    </p>
+                  </div>
             </div>
-
-            <div class="col-md-3 col-sm-3">
+            <div class="col-md-2 col-sm-2">
               <h5> Rating</h5>
-              <%= placeinside['result']['rating']	  %>
+              <!--        <%= placeinside['result']['rating']	  %>  -->
             </div>
         <% end  %>
         </div>
@@ -117,13 +154,6 @@
 
 
 
-
-<ul>
-  <%	 @actividad.micrositios.each do |x| %>
-      <li> <%=	 x.name %> </li>
-  <%	 end %>
-
-</ul>
 
 
 
