--- a/app/views/micrositios/show.html.erb
+++ b/app/views/micrositios/show.html.erb
@@ -1,52 +1,90 @@
 
 
-<%	place = ActiveSupport::JSON.decode(open("https://maps.googleapis.com/maps/api/place/details/json?reference=#{@micrositio.reference}&sensor=true&key=AIzaSyCxH3uvobKynTSs63CoAcTQSB0xzCRduCs").read) %>
+<%	 if @micrositio.reference.nil?  %>
+    <%	place = ActiveSupport::JSON.decode(open("https://graph.facebook.com/#{@micrositio.referencefb}?&access_token=#{current_user.oauth_token}").read) %>
 
+    <div class="col-md-12">
+      <div class="row">
+        <div class="col-md-6 col-xs-12">
+          <div class="img-responsive">
+            <%	 if place['cover'].nil?  %>
+            <%	else  %>
+                <div class="img-responsive" style="height: 100px; overflow: hidden">
+                  <%= image_tag(place['cover']['source'])  %>
+                </div>
+            <%	end  %>
+          </div>
+        </div>
+        <div class="col-md-6 col-xs-12">
+          <h1> <%= place['name']	  %></h1>
+        </div>
+      </div>
+      <div class="row" style="margin-top: 20px">
+        <div class="col-md-6 col-xs-12">
+          <div class="comentariosfbmicrositio">
+            <div class="fb-comments" data-href="<%=request.original_url%>" data-numposts="10" data-width= "400"></div>
+          </div>
+        </div>
+        <div class="col-md-6 col-xs-12">
+        </div>
+      </div>
 
-
-
-<div class="col-md-12">
-  <div class="row">
-  <div class="col-md-6 col-xs-12">
-    <div class="img-responsive">
-      <%	 if place['result']['photos'].nil?  %>
-      <%	else  %>
-      <%= image_tag("https://maps.googleapis.com/maps/api/place/photo?maxwidth=300&photoreference=#{place['result']['photos'][0]['photo_reference']}&sensor=true&key=AIzaSyCxH3uvobKynTSs63CoAcTQSB0xzCRduCs")  %>
-      <%	end  %>
     </div>
-  </div>
-  <div class="col-md-6 col-xs-12">
-       <h1> <%= place['result']['name']	  %></h1>
-  </div>
-  </div>
-  <div class="row" style="margin-top: 20px">
-    <div class="col-md-6 col-xs-12">
-      <div class="comentariosfbmicrositio">
-        <div class="fb-comments" data-href="<%=request.original_url%>" data-numposts="10" data-width= "400"></div>
+
+<%	else  %>
+
+    <%	place = ActiveSupport::JSON.decode(open("https://maps.googleapis.com/maps/api/place/details/json?reference=#{@micrositio.reference}&sensor=true&key=AIzaSyCxH3uvobKynTSs63CoAcTQSB0xzCRduCs").read) %>
+    <div class="col-md-12">
+      <div class="row">
+        <div class="col-md-6 col-xs-12">
+          <div class="img-responsive">
+            <%	 if place['result']['photos'].nil?  %>
+            <%	else  %>
+                <%= image_tag("https://maps.googleapis.com/maps/api/place/photo?maxwidth=300&photoreference=#{place['result']['photos'][0]['photo_reference']}&sensor=true&key=AIzaSyCxH3uvobKynTSs63CoAcTQSB0xzCRduCs")  %>
+            <%	end  %>
+          </div>
+        </div>
+        <div class="col-md-6 col-xs-12">
+          <h1> <%= place['result']['name']	  %></h1>
+        </div>
+      </div>
+      <div class="row" style="margin-top: 20px">
+        <div class="col-md-6 col-xs-12">
+          <div class="comentariosfbmicrositio">
+            <div class="fb-comments" data-href="<%=request.original_url%>" data-numposts="10" data-width= "400"></div>
+          </div>
+        </div>
+        <div class="col-md-6 col-xs-12">
+        </div>
+      </div>
+      <div class="row">
+        <%	 if place['result']['photos'].nil?  %>
+        <%	else  %>
+            <%	place['result']['photos'].each do |photo|  %>
+                <ul class="inline">
+
+                  <%	 if photo['photo_reference'] == place['result']['photos'][0]['photo_reference'] %>
+                  <%	else  %>
+                      <li>    <%= image_tag("https://maps.googleapis.com/maps/api/place/photo?maxwidth=300&photoreference=#{photo['photo_reference']}&sensor=true&key=AIzaSyCxH3uvobKynTSs63CoAcTQSB0xzCRduCs")  %>
+                      </li>
+                      </ul>
+                  <%	end  %>
+            <%	end  %>
+        <%	end  %>
       </div>
     </div>
-    <div class="col-md-6 col-xs-12">
-    </div>
-    </div>
-  <div class="row">
-    <%	 if place['result']['photos'].nil?  %>
-    <%	else  %>
-        <%	place['result']['photos'].each do |photo|  %>
-           <ul class="inline">
-
-             <%	 if photo['photo_reference'] == place['result']['photos'][0]['photo_reference'] %>
-             <%	else  %>
-               <li>    <%= image_tag("https://maps.googleapis.com/maps/api/place/photo?maxwidth=300&photoreference=#{photo['photo_reference']}&sensor=true&key=AIzaSyCxH3uvobKynTSs63CoAcTQSB0xzCRduCs")  %>
-               </li>
-               </ul>
-             <%	end  %>
-        <%	end  %>
-    <%	end  %>
-  </div>
 
 
 
-</div>
+
+<%	end  %>
+
+
+
+
+
+
+
 
 
 
