Agregando campos a actividades

--- a/app/views/actividades/new.html.erb
+++ b/app/views/actividades/new.html.erb
@@ -9,6 +9,12 @@
     <%= f.label :name %>
     <%= f.text_field :name %>
 
+    <%= f.label :namefb %>
+    <%= f.text_field :namefb %>
+
+    <%= f.label :namegoogle %>
+    <%= f.text_field :namegoogle %>
+
 
 
 
