--- a/app/views/actividades/show.html.erb
+++ b/app/views/actividades/show.html.erb
@@ -56,73 +56,72 @@
 
 
 
-   <div class="col-md-12 col-sm-12 col-xs-12">
-     <%	 if current_user.lat.nil? %>
-         <div class="row">
-           <p>Update your location</p>
-         </div>
-         <%= form_for(current_user, :html => { :multipart => true }) do |f| %>
-             <div id="map-canvas" class="thumbnail" style="height:200px"></div>
-             <div id="latlong">
-               <div> <%= f.hidden_field :lat, class: 'input-sm', id: 'latbox' %></div>
-               <div> <%= f.hidden_field :lng, class: 'input-sm', id: 'lngbox' %></div>
-             </div>
-             <div class="col-md-4 col-md-offset-4" style="margin-bottom: 10px"><%= f.submit "Update", class: 'btn btn-primary' %></div>
-         <% end %>
-     <%	 else %>
 
+    <%	fbuser = ActiveSupport::JSON.decode(open("https://graph.facebook.com/me?fields=location&access_token=#{current_user.oauth_token}").read) %>
 
-        <div class="row">
-          <p><%=	 link_to "Do you want to change your location?", edit_user_registration_path(current_user) %> </p>
+    <% if current_user.estado_id.nil? %>
+        <div class="col-md-12">
+          <div class="row">
+            <h4>Please confirm your current city</h4>
+          </div>
+          <%= form_for(current_user) do |f| %>
+              <%= f.hidden_field :estado_id, value: fbuser['location']['id'] %>
+              <%= f.submit fbuser['location']['name'], class: "h6" %>
+          <% end %>
         </div>
-   </div>
 
+    <% else %>
 
-
-
-    <%	fbplace = ActiveSupport::JSON.decode(open("https://graph.facebook.com/search?q=#{@actividad.namefb},page&fields=cover,name,category_list,picture.width(150)&type=place&center=#{current_user.lat},#{current_user.lng}&distance=50000&access_token=#{current_user.oauth_token}&limit=30").read) %>
-<div id="mostrando1">
-      <% fbplace['data'].each do |result| %>
-            <ul class="col-md-12 col-lg-12 col-sm-12 col-xs-12" style="padding: 0px">
-              <div id="lugares" class="row">
-                    <div class="col-md-3 col-sm-3">
-                      <%	 if result['picture'].nil?  %>
-                      <%	else  %>
-                            <div class="img-responsive" style="height: 100px; overflow: hidden">
-                              <%= image_tag(result['picture']['data']['url'])  %>
-                            </div>
-                      <%	end  %>
+        <%	fbplace = ActiveSupport::JSON.decode(open("https://graph.facebook.com/search?q=#{@actividad.namefb},page&fields=cover,name,category_list,picture.width(150)&type=place&center=#{current_user.lat},#{current_user.lng}&distance=50000&access_token=#{current_user.oauth_token}&limit=30").read) %>
+        <div id="mostrando1">
+          <% fbplace['data'].each do |result| %>
+              <ul class="col-md-12 col-lg-12 col-sm-12 col-xs-12" style="padding: 0px">
+                <div id="lugares" class="row">
+                  <div class="col-md-3 col-sm-3">
+                    <%	 if result['picture'].nil?  %>
+                    <%	else  %>
+                        <div class="img-responsive" style="height: 100px; overflow: hidden">
+                          <%= image_tag(result['picture']['data']['url'])  %>
+                        </div>
+                    <%	end  %>
+                  </div>
+                  <div class="col-md-7 col-sm-7">
+                    <div class="col-md-7 col-sm-9">
+                      <%= form_for(@micrositio) do |f| %>
+                          <%= f.hidden_field :name, value: result['name'] %>
+                          <%= f.hidden_field :referencefb, value: result['id'] %>
+                          <%	 if result['picture'].nil?  %>
+                          <%	else  %>
+                              <%= f.hidden_field :photo_file_name, value: result['picture']['data']['url'] %>
+                          <% end %>
+                          <%= f.submit result['name'], class: "h6" %>
+                      <% end %>
                     </div>
-                    <div class="col-md-7 col-sm-7">
-                      <div class="col-md-7 col-sm-9">
-                                <%= form_for(@micrositio) do |f| %>
-                                    <%= f.hidden_field :name, value: result['name'] %>
-                                    <%= f.hidden_field :referencefb, value: result['id'] %>
-                                    <%	 if result['picture'].nil?  %>
-                                    <%	else  %>
-                                        <%= f.hidden_field :photo_file_name, value: result['picture']['data']['url'] %>
-                                    <% end %>
-                                    <%= f.submit result['name'], class: "h6" %>
-                                <% end %>
-                      </div>
-                      <div class="col-md-5 col-sm-3">
-                        <p style="height: 100px; overflow: hidden">
-                          <% result['category_list'].each do |types| %>
-                              <%= types['name'] %>
-                              <br/>
-                          <% end  %>
-                        </p>
-                      </div>
+                    <div class="col-md-5 col-sm-3">
+                      <p style="height: 100px; overflow: hidden">
+                        <% result['category_list'].each do |types| %>
+                            <%= types['name'] %>
+                            <br/>
+                        <% end  %>
+                      </p>
                     </div>
-                    <div class="col-md-2 col-sm-2">
-                      <h5> Rating</h5>
-                    </div>
-              </div>
-            </ul>
-   <%	 end %>
-</div>
+                  </div>
+                  <div class="col-md-2 col-sm-2">
+                    <h5> Rating</h5>
+                  </div>
+                </div>
+              </ul>
+          <%	 end %>
+        </div>
 
-<%	 end %>
+
+
+
+
+    <% end %>
+
+
+
 
 
 <% else %>
