--- a/app/views/limbo/home.html.erb
+++ b/app/views/limbo/home.html.erb
@@ -3,8 +3,25 @@
 
 <% if signed_in? %>
 
+    <%	fbuser = ActiveSupport::JSON.decode(open("https://graph.facebook.com/me?fields=location&access_token=#{current_user.oauth_token}").read) %>
 
 
+    <%	fbloc = ActiveSupport::JSON.decode(open("https://graph.facebook.com/#{fbuser['location']['id']}").read) %>
+
+    <% if current_user.lat.nil? %>
+        <div class="col-md-12">
+          <div class="row">
+            <h4>Please confirm your current city</h4>
+          </div>
+          <%= form_for(current_user) do |f| %>
+              <%= f.hidden_field :lat, value: fbloc['location']['latitude'] %>
+              <%= f.hidden_field :lng, value: fbloc['location']['longitude'] %>
+              <%= f.submit fbloc['location']['name'], class: "h6" %>
+          <% end %>
+        </div>
+
+    <% else %>
+    <% end %>
 
 <% else %>
 
