--- a/app/views/actividades/show.html.erb
+++ b/app/views/actividades/show.html.erb
@@ -57,19 +57,23 @@
 
 
 
-    <%	fbuser = ActiveSupport::JSON.decode(open("https://graph.facebook.com/me?fields=location&access_token=#{current_user.oauth_token}").read) %>
+    <% if current_user.lat.nil? %>
 
-    <% if current_user.estado_id.nil? %>
+        <%	fbuser = ActiveSupport::JSON.decode(open("https://graph.facebook.com/me?fields=location&access_token=#{current_user.oauth_token}").read) %>
+        <%	fbloc = ActiveSupport::JSON.decode(open("https://graph.facebook.com/#{fbuser['location']['id']}").read) %>
+
         <div class="col-md-12">
           <div class="row">
             <h4>Please confirm your current city</h4>
           </div>
           <%= form_for(current_user) do |f| %>
-              <%= f.hidden_field :estado_id, value: fbuser['location']['id'] %>
-              <%= f.submit fbuser['location']['name'], class: "h6" %>
+              <%= f.hidden_field :lat, value: fbloc['location']['latitude'] %>
+              <%= f.hidden_field :lng, value: fbloc['location']['longitude'] %>
+              <%= f.submit fbloc['location']['name'], class: "h6" %>
           <% end %>
         </div>
 
+   
     <% else %>
 
         <%	fbplace = ActiveSupport::JSON.decode(open("https://graph.facebook.com/search?q=#{@actividad.namefb},page&fields=cover,name,category_list,picture.width(150)&type=place&center=#{current_user.lat},#{current_user.lng}&distance=50000&access_token=#{current_user.oauth_token}&limit=30").read) %>
