--- a/app/assets/stylesheets/simple-sidebar.css
+++ b/app/assets/stylesheets/simple-sidebar.css
@@ -6,6 +6,7 @@
 #sidebar-wrapper {
   margin-top: -4px;
   padding-top: 20px;
+    padding-bottom: -20px;
   margin-left: -250px;
   left: 250px;
   width: 200px;
