--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,7 +5,6 @@
 
 
     <h1>Usuarios</h1>
-<% friends['data'].first(20).each do |x|  %>
 
 
 
@@ -24,6 +23,7 @@
             <div id="collapseOne" class="panel-collapse collapse in ">
               <div class="panel-body">
                 <div class="row" style="margin-top: -15px; margin-bottom: -15px">
+<% friends['data'].each do |x|  %>
 
                     <% if  x.nil? %>
                       <div class="text-center" style="margin: 10px">
@@ -44,7 +44,7 @@
                               <div class="col-xs-4    col-sm-2">
 
 
-                                        <%= link_to image_tag(x['picture']['data']['url'], class: "avatarchico" ), x %>
+                              <%= link_to image_tag(x['picture']['data']['url'], class: "avatarchico" ), x %>
 
                               </div>
                               <div class="col-xs-5 col-sm-5 ">
