--- a/app/views/micrositios/show.html.erb
+++ b/app/views/micrositios/show.html.erb
@@ -1,33 +1,83 @@
 
 
-    <%	place = ActiveSupport::JSON.decode(open("https://graph.facebook.com/#{@micrositio.referencefb}?&access_token=#{current_user.oauth_token}").read) %>
+    <%	place = ActiveSupport::JSON.decode(open("https://graph.facebook.com/#{@micrositio.referencefb}?fields=picture.width(250),likes,hours,name,posts,location,were_here_count,talking_about_count,description&access_token=#{current_user.oauth_token}").read) %>
 
     <div class="col-md-12">
       <div class="row">
         <div class="col-md-6 col-xs-12">
           <div class="img-responsive">
-            <%	 if place['cover'].nil?  %>
+            <%	 if place['picture'].nil?  %>
             <%	else  %>
-                <div class="img-responsive" style="height: 100px; overflow: hidden">
-                  <%= image_tag(place['cover']['source'])  %>
+                <div class="img-responsive" style="height: 300px; overflow: hidden">
+                  <%= image_tag(place['picture']['data']['url'])   %>
                 </div>
             <%	end  %>
           </div>
         </div>
         <div class="col-md-6 col-xs-12">
+          <div class="row">
           <h1> <%= place['name']	  %></h1>
+          </div>
+          <div class="row">
+          <h4> <%= place['location']['street']	  %></h4>
+          <h4> <%= place['location']['city']	  %></h4>
+          <h4> <%= place['location']['country']	  %></h4>
+          </div>
+          <div class="row">
+            <h5> <p style="font-weight: bold; font-size: 16px"> <%= place['were_here_count']  %>   persons where here.</p> </h5>
+            <h5> <p style="font-weight: bold; font-size: 16px"> <%= place['talking_about_count']  %>   are talking about this place.</p> </h5>
+            <h5> <p style="font-weight: bold; font-size: 16px"> <%= place['likes']  %>  likes in Facebook.</p> </h5>
+
+          </div>
           <div class="col-md-6" style="padding-top: 40px">
             <%= render 'follow_form' if signed_in? %>
           </div>
+        </div>
+
+      </div>
+      <div class="row">
+        <div class="col-md-8 col-xs-12">
+          <br/>
+            <h2>Description</h2>
+            <p> <%= place['description']	  %></p>
+        </div>
+        <div class="col-md-4 col-xs-12">
+          <br/>
+          <%	 if place['hours'].nil?  %>
+          <%	else  %>
+          <h2>Hours</h2>
+         <% place['hours'].each do |x|  %>
+         <%= x  %>
+              <br/>
+         <% end %>
+         <% end %>
         </div>
       </div>
       <div class="row" style="margin-top: 20px">
         <div class="col-md-6 col-xs-12">
           <div class="comentariosfbmicrositio">
-            <div class="fb-comments" data-href="<%=request.original_url%>" data-numposts="10" data-width= "400"></div>
+            <div class="fb-comments" data-href="<%=request.original_url%>" data-numposts="10" data-width= "280"></div>
           </div>
         </div>
         <div class="col-md-6 col-xs-12">
+          <%	 if place['posts'].nil?  %>
+          <%	else  %>
+              <h2>Posts</h2>
+          <% place['posts']['data'].each do |x|  %>
+              <div class="row">
+                 <div class="col-md-4 col-xs-4">
+                   <div class="img-responsive" style="overflow: hidden; height: 100px">
+                    <%= image_tag(x['picture'])  %>
+                   </div>
+                 </div>
+                <div class="col-md-8 col-xs-8">
+                  <%= x['message']  %>
+                </div>
+              </div>
+              <br/>
+              <br/>
+          <% end %>
+          <% end %>
         </div>
       </div>
 
