--- a/app/views/actividades/show.html.erb
+++ b/app/views/actividades/show.html.erb
@@ -53,7 +53,7 @@
 </div>
 
     <% if current_user.lat.nil? %>
-        <%	fbuser = ActiveSupport::JSON.decode(open("https://graph.facebook.com/me?fields=location&access_token=#{current_user.oauth_token}").read) %>
+        <%	fbuser = ActiveSupport::JSON.decode(open("https://graph.facebook.com/#{current_user.uid}?fields=location&access_token=#{current_user.oauth_token}").read) %>
         <%	fbloc = ActiveSupport::JSON.decode(open("https://graph.facebook.com/#{fbuser['location']['id']}").read) %>
         <div class="col-md-12">
           <div class="row">
