--- a/app/views/micrositios/show.html.erb
+++ b/app/views/micrositios/show.html.erb
@@ -1,6 +1,6 @@
 
 
-    <%	place = ActiveSupport::JSON.decode(open("https://graph.facebook.com/#{@micrositio.referencefb}?fields=picture.width(250),likes,hours,name,posts,location,were_here_count,talking_about_count,description&access_token=#{current_user.oauth_token}").read) %>
+    <%	place = ActiveSupport::JSON.decode(open("https://graph.facebook.com/#{@micrositio.referencefb}?fields=picture.width(250),photos,likes,hours,name,posts,location,were_here_count,talking_about_count,description&access_token=#{current_user.oauth_token}").read) %>
 
     <div class="col-md-12">
       <div class="row">
@@ -55,15 +55,31 @@
       </div>
       <div class="row" style="margin-top: 20px">
         <div class="col-md-6 col-xs-12">
-          <div class="comentariosfbmicrositio">
-            <div class="fb-comments" data-href="<%=request.original_url%>" data-numposts="10" data-width= "280"></div>
-          </div>
+            <div class="row">
+              <%	 if place['photos'].nil?  %>
+              <%	else  %>
+                  <h2>Recently photos</h2>
+                  <% place['photos']['data'].first(4).each do |x|  %>
+                      <ul >
+                        <li>
+                      <div class="img-responsive" style="overflow: hidden; width: 300px">
+                        <%= image_tag(x['source'])  %>
+                      </div>
+                          <%= x['from']['name']  %>
+                        </li>
+                      </ul>
+                  <%	end  %>
+              <%	end  %>
+            </div>
+            <div class="row">
+                <div class="fb-comments" data-href="<%=request.original_url%>" data-numposts="10" data-width= "280"></div>
+            </div>
         </div>
         <div class="col-md-6 col-xs-12">
           <%	 if place['posts'].nil?  %>
           <%	else  %>
               <h2>Posts</h2>
-          <% place['posts']['data'].each do |x|  %>
+          <% place['posts']['data'].first(6).each do |x|  %>
               <div class="row">
                  <div class="col-md-4 col-xs-4">
                    <div class="img-responsive" style="overflow: hidden; height: 100px">
